--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "target": "es2018",
+    "module": "CommonJS",
+    "experimentalDecorators": true,
+    "allowJs": false,
+    "checkJs": false,
     "outDir": "lib",
-    "declaration": true,
-    "sourceMap": true,
-    "declarationMap": true,
-    "moduleDetection": "force",
-
-    "lib": ["ES2020", "ESNext.Array", "DOM"],
-    "rootDir": "./src",
-
-    // ESM Features
-    "verbatimModuleSyntax": true,
-    "allowImportingTsExtensions": true,
-    "noEmit": true,
-
-    // Type Safety
-    "strict": true,
+    "strict": false,
     "strictNullChecks": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitThis": true,
-    "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-
-    // Interop
+    "noImplicitThis": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-
-    // DX Boosters
-    "allowJs": false,
-    "checkJs": false
+    "forceConsistentCasingInFileNames": true,
+    "declaration": true,
+    "lib": ["es2020", "esnext.array", "DOM"]
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["./src/**/*.ts"],
+  "exclude": ["node_modules", "src/Tests/*", "src/Binary/GenerateStatics.ts"]
 }
