--- a/package.json
+++ b/package.json
@@ -21,20 +21,18 @@
     "engine-requirements.js"
   ],
   "scripts": {
-    "build:all": "npm run build && npm run build:docs",
+    "build:all": "tsc && typedoc",
     "build:docs": "typedoc",
-    "build": "tsc -P tsconfig.build.json && tsc-esm-fix --tsconfig=tsconfig.build.json --ext=.js",
+    "build:tsc": "tsc",
     "changelog:last": "conventional-changelog -p angular -r 2",
     "changelog:preview": "conventional-changelog -p angular -u",
     "changelog:update": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "example": "tsx ./Example/example.ts",
+    "example": "node --inspect -r ts-node/register Example/example.ts",
     "gen:protobuf": "sh WAProto/GenerateStatics.sh",
-    "format": "prettier --write \"src/**/*.{ts,js,json,md}\"",
-    "lint": "tsc && eslint src --ext .js,.ts",
-    "lint:fix": "npm run format && npm run lint --fix",
-    "prepack": "npm run build",
-    "prepare": "npm run build",
-    "preinstall": "node ./engine-requirements.js",
+    "lint": "eslint src --ext .js,.ts",
+    "lint:fix": "yarn lint --fix",
+    "prepack": "tsc",
+    "prepare": "tsc",
     "release": "release-it",
     "test": "jest"
   },
