--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "files": [
     "lib/*",
     "WAProto/*",
-    "engine-requirements.js"
+    "WASignalGroup/*.js"
   ],
   "scripts": {
     "build:all": "tsc && typedoc",
