--- a/package.json
+++ b/package.json
@@ -92,8 +92,5 @@
       "optional": true
     }
   },
-  "packageManager": "yarn@4.9.2",
-  "engines": {
-    "node": ">=20.0.0"
-  }
+  "packageManager": "yarn@1.22.19"
 }
